--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
  </head>
  <body>
     <header>
-
         <h1>Manuela Freitas</h1>
         <p>Estudante do curso técnico em Desenvolvimento de Sistemas</p>
     </header>
+
+    <main>  
+
+    </main>
 </body>
 </html>
