feat:  finaliza a seção sobre mim no arquivo index.css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     </header>
 
     <main>  
-
+       <section id="sobre-mim">
+           <h3 id="titulo-sobre-mim">Sobre Mim</h3> 
+           <p class="texto-sobre-mim">Amo meu Drake💕</p>
+           <p class="texto-sobre-mim">DS é o melhor curso do SENAI Valinhos!</p>
+       </section>
     </main>
 </body>
 </html>
