--- a/index.html
+++ b/index.html
@@ -15,9 +15,18 @@
     <main>  
        <section id="sobre-mim">
            <h3 id="titulo-sobre-mim">Sobre Mim</h3> 
-           <p class="texto-sobre-mim">Amo meu Drake💕</p>
+           <p class="texto-sobre-mim">Amo pets🐶🦜</p>
            <p class="texto-sobre-mim">DS é o melhor curso do SENAI Valinhos!</p>
        </section>
+
+       <section id="meus-hobbies">
+           <h3 id="titulo-meus-hobbies">Meus Hobbies</h3> 
+            <ul>
+                <li>Cozinhar👩🏻‍🍳🍳</li>
+                <li>Assistir séries📺</li>
+                <li>Fazer crochê🧶</li>
+            </ul>
+        </section>
     </main>
 </body>
 </html>
