feat: finaliza a seção contato

--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
                 <li>Fazer crochê🧶</li>
             </ul>
         </section>
+
+        <section id="contato">
+        <h3>Entre em Contato</h3>
+        <p>Quer conversar sobre tecnologia? Me encontre no 
+            <a href="https://github.com/Manu-Freitas" target="_blank">Github</a> ou
+            <a href="https://www.instagram.com/manu_c.freitas/" target="_blank">Instagram</a>
+        </p>
+        </section>
     </main>
 </body>
 </html>
