feat: finaliza o foother e a pagina web

--- a/index.html
+++ b/index.html
@@ -36,5 +36,10 @@
         </p>
         </section>
     </main>
+
+    <footer>
+        <p>2025 Manuela - Minha Primeira Página Web!
+        </p>
+    </footer>
 </body>
 </html>
