feat: cria a página de teste

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     <footer>
         <p>2025 Manuela - Minha Primeira Página Web!
         </p>
+
+        <a href="pages/testes.html">Ir para página testes</a>
     </footer>
 </body>
 </html>
